<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">
    <CheckBox
        android:id="@+id/facultyCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faculty" />
    <CheckBox
        android:id="@+id/studentCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Student" />
    <CheckBox
        android:id="@+id/adminCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Admin" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/mulogo"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_dark" />



</LinearLayout>
