<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/logOutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/facultyLoginSection"
        android:layout_width="match_parent"
        android:layout_height="33dp"

        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Faculty Home Page"
        android:textSize="25sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/announcementLayout"
                    android:layout_width="1dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:orientation="vertical"

                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/announcement" />

                    <TextView
                        android:id="@+id/announcementSection"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Announcement"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/attendanceLayout"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/attendance" />

                    <TextView
                        android:id="@+id/attendanceSection"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/attendance"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/calendarLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"

                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/calendarSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/calendar"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/doubtLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/doubt" />

                    <TextView
                        android:id="@+id/doubtSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="Doubts"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Add more grouped sections in a similar way -->
                <LinearLayout
                    android:id="@+id/facultyLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/faculty" />

                    <TextView
                        android:id="@+id/facultySection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/faculty"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/performanceLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/result" />

                    <TextView
                        android:id="@+id/performanceSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/performance"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Add more grouped sections in a similar way -->
                <LinearLayout
                    android:id="@+id/profileLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile" />

                    <TextView
                        android:id="@+id/profileSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/profile"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
